[FINNA-1432] Fix alignment of selected library card in navbar menu.

--- a/themes/finna2/scss/finna/navigation.scss
+++ b/themes/finna2/scss/finna/navigation.scss
@@ -161,11 +161,12 @@
       justify-content: left;
     }
     > a:not(.card-header) {
-      padding-left: 32px;
+      padding-left: 2rem;
     }
     .icon {
-      margin-left: -1.25em;
+      margin-left: -1.3rem;
       color: $brand-primary;
+      position: absolute;
     }
   }
   > li {
